testsuite/tests/grammar/invalid_lkt/no_main_rule.lkt
import lexer_example
import common

@with_lexer(foo_lexer) grammar foo_grammar {
    rule1 <- Example("example")
}
